--- a/CloudFormation/VPC & EC2/vpcec2.yaml
+++ b/CloudFormation/VPC & EC2/vpcec2.yaml
@@ -1,1 +1,34 @@
+AWSTemplateFormatVersion: '2010-09-09'
+Description: TrialVPC with EC2 instance (TrialServer) tamplete
 
+Resources:
+
+#####
+# VPC with Internet Gateway
+#####
+
+  VPC:
+    Type: AWS::EC2::VPC
+    Properties:
+      CidrBlock: 10.0.0.0/16
+      EnableDnsSupport: true
+      EnableDnsHostnames: true
+      Tags:
+        - Key: Name
+          Value: Trial VPC
+
+  IGW:
+    Type: AWS::EC2::InternetGateway
+    Properties:
+      Tags:
+        - Key: Name
+          Value: Trial IGW
+
+  VPCGatewayAttachment:
+    Type: AWS::EC2::VPCGatewayAttachment
+    DependsOn:
+      - IGW
+      - VPC
+    Properties:
+      VpcId: !Ref VPC
+      InternetGatewayId: !Ref IGW
