Solve dependencies for PublicRouteTable in "DefaultRoute"

--- a/CloudFormation/VPC & EC2/vpcec2.yaml
+++ b/CloudFormation/VPC & EC2/vpcec2.yaml
@@ -64,7 +64,7 @@ Resources:
   DefaultRoute:
     Type: AWS::EC2::Route
     DependsOn:
-      - PublicRouteTable
+      - RouteTable
       - VPCGatewayAttachment 
     Properties:
       RouteTableId: !Ref RouteTable
