Update UserData script

--- a/CloudFormation/VPC & EC2/vpcec2.yaml
+++ b/CloudFormation/VPC & EC2/vpcec2.yaml
@@ -123,7 +123,7 @@ Resources:
           sudo yum install httpd -y
           sudo systemctl start httpd
           sudo systemctl enable httpd
-          echo "Congratulations Tony for Creating your First CloudFormation Template"
+          echo "Congratulations Tony for Creating your First CloudFormation Template" | sudo tee /var/www/html/index.html
       Tags:
         - Key: Name
           Value: TrialServer
